# FerroUI

./: .env.example  .gitignore  .npmrc  AUDIT_REPORT.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FORK_REPORT.md  LICENSE  MONITORING.md  README.md  SANITIZATION_REPORT.md  SECURITY.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  run_puppeteer.mjs  setup.sh  stryker.conf.mjs  test-native.ts  tsconfig.apps.json  tsconfig.json  turbo.json  validate-demo.ts  vitest.config.ts  vitest.workspace.ts
.claude/: hookify.backend-ui-sync.local.md  hookify.quality-gate.local.md  hookify.sanity-check.local.md  hookify.validate-alloy-layout.local.md
.gemini/: settings.json
.github/: SECRETS_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: chromatic.yml  ci.yml  docs-deploy.yml  eval-gate.yml  load.yml  release.yml  stryker.yml
.storybook/: main.ts  preview.ts
.tmp_pup/: package.json  run_puppeteer.mjs
alloy/evals/: dataset.ts
apps/desktop/: README.md  index.html  modules.d.ts  package.json  (+5 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: llm.rs  types.rs
demo/: spec.md
docs/: 404.md  index.md  introduction.md
infra/: main.tf  otel-collector-config.yaml  providers.tf  variables.tf
playwright-report/: index.html
scripts/: audit-docs-nav.ts  build-tokens.ts  generate-api-docs.ts  generate-docs.ts  generate-typedoc.ts  publish-packages.sh
tests/: integration.test.ts
tokens/: build.ts
(+228 files in other folders)
